Batch update of generated files

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,33 @@
     */
     const newsData = [
   {
+    "title": "Metro TP.HCM vào top 100 điểm đến tuyệt nhất năm 2025 theo tạp chí Time",
+    "content": "Tuyến metro số 1 (Bến Thành - Suối Tiên) của TP.HCM vừa được tạp chí Time (Mỹ) công nhận là một trong 100 điểm đến tuyệt nhất năm 2025. Đây là thành tựu lớn của thành phố, khẳng định sự đổi mới trong hạ tầng giao thông và sức hút của nơi đây đối với du khách quốc tế. Tuyến metro dài 19,7 km với 14 trạm dừng không chỉ nâng cao chất lượng sống mà còn mang lại trải nghiệm thuận tiện cho người dân và du khách khi khám phá TP.HCM.",
+    "link": "https://tuoitre.vn/metro-tp-hcm-vao-top-100-diem-den-tuyet-nhat-nam-2025-theo-tap-chi-time-20250325154128157.htm",
+    "cat": "du-lich",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Tuyến metro nào của TP.HCM được vinh danh trong danh sách 100 điểm đến tuyệt nhất năm 2025 của tạp chí Time?",
+    "answers": [
+      {
+        "text": "Tuyến metro số 1 (Bến Thành - Suối Tiên)",
+        "correct": true
+      },
+      {
+        "text": "Tuyến metro số 2 (Bến Thành - Tham Lương)",
+        "correct": false
+      },
+      {
+        "text": "Tuyến metro số 3 (Bến Thành - Tân Kiên)",
+        "correct": false
+      },
+      {
+        "text": "Tuyến metro số 4 (Thủ Thiêm - Tây Ninh)",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Bắt nhanh người cướp tài sản trong cửa hàng Winmart",
     "content": "Vào khoảng 21h42 ngày 24-3, tại cửa hàng Winmart thuộc thôn Khôi Vĩ Hạ, xã Tân Minh, huyện Tiên Lãng, TP Hải Phòng, Ngô Văn Quang đã lợi dụng sơ hở của nhân viên để cướp tài sản. Sau khi xịt hơi cay vào mặt nhân viên, Quang đã lấy tiền và bỏ chạy. Công an xã Tân Minh đã nhanh chóng triển khai lực lượng và bắt giữ Quang cùng tang vật có liên quan, bao gồm xe máy và bình xịt hơi cay.",
     "link": "https://tuoitre.vn/bat-nhanh-nguoi-cuop-tai-san-trong-cua-hang-winmart-20250325160219498.htm",
@@ -842,33 +869,6 @@
     ]
   },
   {
-    "title": "VAS tiên phong chuyển đổi số, tích hợp AI vào giảng dạy cho học sinh",
-    "content": "Trường Quốc tế Việt Úc (VAS) đang tiên phong trong việc chuyển đổi số và tích hợp trí tuệ nhân tạo (AI) vào chương trình giảng dạy cho học sinh. Được tổ chức vào ngày 15/3, hội thảo \"Tối ưu cuộc sống với AI\" thu hút sự tham gia của hơn 200 phụ huynh và 1 triệu lượt xem trực tuyến. Từ năm học 2025-2026, học sinh VAS sẽ có một tiết học về AI mỗi tuần, nhằm trang bị kỹ năng cần thiết cho thế hệ công dân số. VAS cam kết không ngừng đổi mới và phát triển để giữ vững vị thế hàng đầu trong giáo dục quốc tế tại Việt Nam.",
-    "link": "https://dantri.com.vn/giao-duc/vas-tien-phong-chuyen-doi-so-tich-hop-ai-vao-giang-day-cho-hoc-sinh-20250325141325818.htm",
-    "cat": "giao-duc",
-    "positivity": 9,
-    "importance": 8,
-    "question": "VAS tích hợp AI vào chương trình giảng dạy như thế nào?",
-    "answers": [
-      {
-        "text": "Học sinh sẽ có một tiết học về AI mỗi tuần.",
-        "correct": true
-      },
-      {
-        "text": "Học sinh sẽ học về lịch sử AI.",
-        "correct": false
-      },
-      {
-        "text": "VAS không có chương trình dạy về AI.",
-        "correct": false
-      },
-      {
-        "text": "Học sinh chỉ học lý thuyết về AI.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Bệnh lao phổi có thể chữa khỏi không?",
     "content": "Bệnh lao phổi có thể chữa khỏi hoàn toàn nếu được phát hiện sớm và điều trị theo đúng phác đồ. Tỷ lệ điều trị thành công đối với lao phổi nhạy cảm với thuốc lên đến khoảng 95%, trong khi lao kháng thuốc có tỷ lệ thành công từ 60-80%. Người bệnh cần tuân thủ nghiêm ngặt thời gian và liều lượng thuốc, đồng thời duy trì chế độ dinh dưỡng hợp lý để tăng cường sức đề kháng.",
     "link": "https://vnexpress.net/benh-lao-phoi-co-the-chua-khoi-khong-4865645.html",
@@ -891,6 +891,33 @@
       },
       {
         "text": "Có, nhưng chỉ với thuốc đặc trị.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "VAS tiên phong chuyển đổi số, tích hợp AI vào giảng dạy cho học sinh",
+    "content": "Trường Quốc tế Việt Úc (VAS) đang tiên phong trong việc chuyển đổi số và tích hợp trí tuệ nhân tạo (AI) vào chương trình giảng dạy cho học sinh. Được tổ chức vào ngày 15/3, hội thảo \"Tối ưu cuộc sống với AI\" thu hút sự tham gia của hơn 200 phụ huynh và 1 triệu lượt xem trực tuyến. Từ năm học 2025-2026, học sinh VAS sẽ có một tiết học về AI mỗi tuần, nhằm trang bị kỹ năng cần thiết cho thế hệ công dân số. VAS cam kết không ngừng đổi mới và phát triển để giữ vững vị thế hàng đầu trong giáo dục quốc tế tại Việt Nam.",
+    "link": "https://dantri.com.vn/giao-duc/vas-tien-phong-chuyen-doi-so-tich-hop-ai-vao-giang-day-cho-hoc-sinh-20250325141325818.htm",
+    "cat": "giao-duc",
+    "positivity": 9,
+    "importance": 8,
+    "question": "VAS tích hợp AI vào chương trình giảng dạy như thế nào?",
+    "answers": [
+      {
+        "text": "Học sinh sẽ có một tiết học về AI mỗi tuần.",
+        "correct": true
+      },
+      {
+        "text": "Học sinh sẽ học về lịch sử AI.",
+        "correct": false
+      },
+      {
+        "text": "VAS không có chương trình dạy về AI.",
+        "correct": false
+      },
+      {
+        "text": "Học sinh chỉ học lý thuyết về AI.",
         "correct": false
       }
     ]
@@ -3141,33 +3168,6 @@
     ]
   },
   {
-    "title": "Sống - làm việc - giải trí đa thế hệ tại công viên xanh rộng lớn ở miền Trung",
-    "content": "Công viên Eco Central Park ở miền Trung Việt Nam là khu đô thị lớn với diện tích gần 200ha, cung cấp không gian sống, làm việc và giải trí cho cư dân đa thế hệ. Dự án chú trọng vào việc phát triển không gian xanh và tiện ích đa dạng, bao gồm trường học, không gian làm việc chung và khu thể thao, nhằm tạo ra một môi trường sống lành mạnh và tiện nghi. Với nhiều cây xanh và mặt nước, Eco Central Park hứa hẹn trở thành trung tâm văn hóa, giải trí mới tại Nghệ An.",
-    "link": "https://tuoitre.vn/song-lam-viec-giai-tri-da-the-he-tai-cong-vien-xanh-rong-lon-o-mien-trung-20250324160729873.htm",
-    "cat": "gia-dinh",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Eco Central Park ở miền Trung có gì đặc biệt cho cư dân?",
-    "answers": [
-      {
-        "text": "Cung cấp không gian sống, làm việc và giải trí đa thế hệ.",
-        "correct": true
-      },
-      {
-        "text": "Chỉ có cây xanh và mặt nước.",
-        "correct": false
-      },
-      {
-        "text": "Không có trường học và khu thể thao.",
-        "correct": false
-      },
-      {
-        "text": "Là một khu đô thị nhỏ với ít tiện ích.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Dấu hiệu nhận biết nốt ruồi có nguy cơ ung thư",
     "content": "Nốt ruồi có thể là dấu hiệu cảnh báo ung thư da, đặc biệt là u hắc tố ác tính. Những dấu hiệu cần lưu ý bao gồm sự bất đối xứng, bờ không đều, màu sắc bất thường và đường kính lớn hơn 6 mm. Nếu nốt ruồi biến đổi theo thời gian hoặc có triệu chứng như ngứa, đau, cần thăm khám bác sĩ ngay. Để phòng ngừa, nên tránh nắng gắt và kiểm tra da thường xuyên.",
     "link": "https://vnexpress.net/dau-hieu-nhan-biet-not-ruoi-co-nguy-co-ung-thu-4865300.html",
@@ -3190,6 +3190,33 @@
       },
       {
         "text": "Nốt ruồi không thay đổi theo thời gian.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Sống - làm việc - giải trí đa thế hệ tại công viên xanh rộng lớn ở miền Trung",
+    "content": "Công viên Eco Central Park ở miền Trung Việt Nam là khu đô thị lớn với diện tích gần 200ha, cung cấp không gian sống, làm việc và giải trí cho cư dân đa thế hệ. Dự án chú trọng vào việc phát triển không gian xanh và tiện ích đa dạng, bao gồm trường học, không gian làm việc chung và khu thể thao, nhằm tạo ra một môi trường sống lành mạnh và tiện nghi. Với nhiều cây xanh và mặt nước, Eco Central Park hứa hẹn trở thành trung tâm văn hóa, giải trí mới tại Nghệ An.",
+    "link": "https://tuoitre.vn/song-lam-viec-giai-tri-da-the-he-tai-cong-vien-xanh-rong-lon-o-mien-trung-20250324160729873.htm",
+    "cat": "gia-dinh",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Eco Central Park ở miền Trung có gì đặc biệt cho cư dân?",
+    "answers": [
+      {
+        "text": "Cung cấp không gian sống, làm việc và giải trí đa thế hệ.",
+        "correct": true
+      },
+      {
+        "text": "Chỉ có cây xanh và mặt nước.",
+        "correct": false
+      },
+      {
+        "text": "Không có trường học và khu thể thao.",
+        "correct": false
+      },
+      {
+        "text": "Là một khu đô thị nhỏ với ít tiện ích.",
         "correct": false
       }
     ]
@@ -3311,33 +3338,6 @@
     ]
   },
   {
-    "title": "Cha là người Pháp, mẹ là người Việt, con có được song tịch không?",
-    "content": "Con gái của bạn, sinh ra và lớn lên ở Pháp với cha là người Pháp và mẹ là người Việt, có khả năng xin nhập quốc tịch Việt Nam mà không cần thôi quốc tịch Pháp. Theo Điều 19 Luật Quốc tịch Việt Nam, nếu người xin nhập quốc tịch là con đẻ của công dân Việt Nam, họ có thể được phép nhập quốc tịch Việt Nam mà không phải đáp ứng một số điều kiện. Hồ sơ cần chuẩn bị bao gồm đơn xin nhập quốc tịch, giấy khai sinh và lý lịch tư pháp.",
-    "link": "https://tuoitre.vn/cha-la-nguoi-phap-me-la-nguoi-viet-con-co-duoc-song-tich-khong-20250306121602648.htm",
-    "cat": "phap-luat",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Con gái tôi có thể có song tịch không nếu cha là người Pháp và mẹ là người Việt?",
-    "answers": [
-      {
-        "text": "Có, cháu có thể xin nhập quốc tịch Việt Nam mà không phải thôi quốc tịch Pháp.",
-        "correct": true
-      },
-      {
-        "text": "Không, cháu phải thôi quốc tịch Pháp để có quốc tịch Việt Nam.",
-        "correct": false
-      },
-      {
-        "text": "Có, nhưng cháu cần phải sống ở Việt Nam ít nhất 5 năm.",
-        "correct": false
-      },
-      {
-        "text": "Không, cháu không đủ điều kiện để xin quốc tịch Việt Nam.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Đề xuất tăng dần tiền lương đóng BHXH bắt buộc cho học viên quân đội, công an",
     "content": "Bộ Quốc phòng vừa đề xuất điều chỉnh mức tiền lương đóng bảo hiểm xã hội (BHXH) cho học viên quân đội và công an. Theo dự thảo, trong hai năm đầu, mức lương đóng BHXH sẽ bằng hai lần mức tham chiếu, sau đó tăng dần 0,5 lần mỗi năm, tối đa đạt 4 lần mức tham chiếu. Đề xuất này nhằm khắc phục hạn chế trong quyền lợi hưu trí của các quân nhân và phù hợp với Luật BHXH sửa đổi.",
     "link": "https://vnexpress.net/de-xuat-tang-dan-tien-luong-dong-bhxh-bat-buoc-cho-hoc-vien-quan-doi-cong-an-4865318.html",
@@ -3360,6 +3360,33 @@
       },
       {
         "text": "Mức đóng BHXH sẽ không thay đổi trong 5 năm tới.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Cha là người Pháp, mẹ là người Việt, con có được song tịch không?",
+    "content": "Con gái của bạn, sinh ra và lớn lên ở Pháp với cha là người Pháp và mẹ là người Việt, có khả năng xin nhập quốc tịch Việt Nam mà không cần thôi quốc tịch Pháp. Theo Điều 19 Luật Quốc tịch Việt Nam, nếu người xin nhập quốc tịch là con đẻ của công dân Việt Nam, họ có thể được phép nhập quốc tịch Việt Nam mà không phải đáp ứng một số điều kiện. Hồ sơ cần chuẩn bị bao gồm đơn xin nhập quốc tịch, giấy khai sinh và lý lịch tư pháp.",
+    "link": "https://tuoitre.vn/cha-la-nguoi-phap-me-la-nguoi-viet-con-co-duoc-song-tich-khong-20250306121602648.htm",
+    "cat": "phap-luat",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Con gái tôi có thể có song tịch không nếu cha là người Pháp và mẹ là người Việt?",
+    "answers": [
+      {
+        "text": "Có, cháu có thể xin nhập quốc tịch Việt Nam mà không phải thôi quốc tịch Pháp.",
+        "correct": true
+      },
+      {
+        "text": "Không, cháu phải thôi quốc tịch Pháp để có quốc tịch Việt Nam.",
+        "correct": false
+      },
+      {
+        "text": "Có, nhưng cháu cần phải sống ở Việt Nam ít nhất 5 năm.",
+        "correct": false
+      },
+      {
+        "text": "Không, cháu không đủ điều kiện để xin quốc tịch Việt Nam.",
         "correct": false
       }
     ]
@@ -3570,6 +3597,37 @@
     ]
   },
   {
+    "title": "Vườn hoa Lý Thái Tổ trước ngày cải tạo",
+    "content": "Vườn hoa Lý Thái Tổ tại Hà Nội sẽ được cải tạo từ tháng 4 đến tháng 10 năm 2025 nhằm nâng cao cảnh quan và công năng sử dụng. Dự án bao gồm việc mở rộng sân Khánh tiết, lắp đặt Km0, và cải tạo cảnh quan cây xanh với nguyên tắc giữ lại các cây cổ thụ có giá trị. Sau khi cải tạo, tổng số cây bóng mát tại vườn sẽ tăng lên 114 cây, đồng thời sẽ có các hệ thống phun nước âm sàn để cải thiện khí hậu khu vực.",
+    "link": "https://vnexpress.net/vuon-hoa-ly-thai-to-truoc-ngay-cai-tao-4865208.html",
+    "cat": "thoi-su",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Vườn hoa Lý Thái Tổ sẽ được cải tạo vào thời gian nào?",
+    "answers": [
+      {
+        "text": "Từ tháng 4 đến tháng 10 năm 2025",
+        "correct": true
+      },
+      {
+        "text": "Từ tháng 1 đến tháng 6 năm 2025",
+        "correct": false
+      },
+      {
+        "text": "Từ tháng 7 đến tháng 12 năm 2025",
+        "correct": false
+      },
+      {
+        "text": "Từ tháng 3 đến tháng 9 năm 2024",
+        "correct": false
+      },
+      {
+        "text": "Từ tháng 5 đến tháng 10 năm 2023",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Xe bán  tải Mỹ bị lo ngại gây ô nhiễm môi trường ở Đức",
     "content": "Tổ chức Hành động Môi trường Đức (DUH) đã khởi kiện Cục Giao thông vận tải liên bang Đức nhằm yêu cầu công bố dữ liệu về xe bán tải Mỹ, cho rằng dòng xe này gây ô nhiễm nghiêm trọng và không đáp ứng các tiêu chuẩn an toàn của EU. Xe bán tải cỡ lớn như Ford F-Series và Ram phát thải CO2 cao gấp 9 lần so với xe châu Âu thông thường. DUH cảnh báo rằng việc cho phép các xe này hoạt động mà không tuân thủ quy định có thể dẫn đến thiệt hại lớn cho môi trường và gia tăng tai nạn giao thông.",
     "link": "https://vnexpress.net/xe-ban-tai-my-bi-lo-ngai-gay-o-nhiem-moi-truong-o-duc-4864995.html",
@@ -3619,37 +3677,6 @@
       },
       {
         "text": "Đại học Yale và Đại học Princeton",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Vườn hoa Lý Thái Tổ trước ngày cải tạo",
-    "content": "Vườn hoa Lý Thái Tổ tại Hà Nội sẽ được cải tạo từ tháng 4 đến tháng 10 năm 2025 nhằm nâng cao cảnh quan và công năng sử dụng. Dự án bao gồm việc mở rộng sân Khánh tiết, lắp đặt Km0, và cải tạo cảnh quan cây xanh với nguyên tắc giữ lại các cây cổ thụ có giá trị. Sau khi cải tạo, tổng số cây bóng mát tại vườn sẽ tăng lên 114 cây, đồng thời sẽ có các hệ thống phun nước âm sàn để cải thiện khí hậu khu vực.",
-    "link": "https://vnexpress.net/vuon-hoa-ly-thai-to-truoc-ngay-cai-tao-4865208.html",
-    "cat": "thoi-su",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Vườn hoa Lý Thái Tổ sẽ được cải tạo vào thời gian nào?",
-    "answers": [
-      {
-        "text": "Từ tháng 4 đến tháng 10 năm 2025",
-        "correct": true
-      },
-      {
-        "text": "Từ tháng 1 đến tháng 6 năm 2025",
-        "correct": false
-      },
-      {
-        "text": "Từ tháng 7 đến tháng 12 năm 2025",
-        "correct": false
-      },
-      {
-        "text": "Từ tháng 3 đến tháng 9 năm 2024",
-        "correct": false
-      },
-      {
-        "text": "Từ tháng 5 đến tháng 10 năm 2023",
         "correct": false
       }
     ]
@@ -3852,37 +3879,6 @@
     ]
   },
   {
-    "title": "Giảm 16 cm vòng eo, người phụ nữ 'lột xác'",
-    "content": "Chị Lê Thị Sủi, 35 tuổi, đã giảm 16 cm vòng eo và cải thiện vóc dáng nhờ chế độ dinh dưỡng khoa học và tập luyện đều đặn 6 buổi mỗi tuần. Sau khi trải qua quá trình giảm cân, chị không chỉ có vòng eo từ 79 cm xuống 63 cm mà còn trở thành huấn luyện viên dinh dưỡng và thể hình, truyền cảm hứng cho nhiều người. Sự thay đổi này không chỉ cải thiện sức khỏe mà còn mang lại cho chị sự tự tin và hạnh phúc trong cuộc sống.",
-    "link": "https://vnexpress.net/giam-16-cm-vong-eo-nguoi-phu-nu-lot-xac-4864021.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Chị Lê Thị Sủi đã giảm bao nhiêu cm vòng eo?",
-    "answers": [
-      {
-        "text": "16 cm",
-        "correct": true
-      },
-      {
-        "text": "10 cm",
-        "correct": false
-      },
-      {
-        "text": "12 cm",
-        "correct": false
-      },
-      {
-        "text": "14 cm",
-        "correct": false
-      },
-      {
-        "text": "18 cm",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Xe gầm cao cỡ B Trung Quốc khuấy động thị trường Việt",
     "content": "Xe gầm cao cỡ B từ Trung Quốc như Geely Coolray, Omoda C5 và MG ZS đang tạo ra sự cạnh tranh mạnh mẽ trên thị trường Việt Nam. Giá bán của những mẫu xe này khá tương đồng, với mức khởi điểm từ hơn 530 triệu đồng, thu hút sự quan tâm từ người tiêu dùng. Dù vẫn đối mặt với tâm lý ưa chuộng thương hiệu Nhật, Hàn, xe Trung Quốc đang dần thu hút khách hàng trẻ và những người có ngân sách hạn chế. Các thương hiệu này cũng có kế hoạch dài hạn để phát triển sản xuất trong nước nhằm tăng sức cạnh tranh.",
     "link": "https://vnexpress.net/xe-gam-cao-co-b-trung-quoc-khuay-dong-thi-truong-viet-4865116.html",
@@ -3909,6 +3905,37 @@
       },
       {
         "text": "Honda HR-V",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Giảm 16 cm vòng eo, người phụ nữ 'lột xác'",
+    "content": "Chị Lê Thị Sủi, 35 tuổi, đã giảm 16 cm vòng eo và cải thiện vóc dáng nhờ chế độ dinh dưỡng khoa học và tập luyện đều đặn 6 buổi mỗi tuần. Sau khi trải qua quá trình giảm cân, chị không chỉ có vòng eo từ 79 cm xuống 63 cm mà còn trở thành huấn luyện viên dinh dưỡng và thể hình, truyền cảm hứng cho nhiều người. Sự thay đổi này không chỉ cải thiện sức khỏe mà còn mang lại cho chị sự tự tin và hạnh phúc trong cuộc sống.",
+    "link": "https://vnexpress.net/giam-16-cm-vong-eo-nguoi-phu-nu-lot-xac-4864021.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Chị Lê Thị Sủi đã giảm bao nhiêu cm vòng eo?",
+    "answers": [
+      {
+        "text": "16 cm",
+        "correct": true
+      },
+      {
+        "text": "10 cm",
+        "correct": false
+      },
+      {
+        "text": "12 cm",
+        "correct": false
+      },
+      {
+        "text": "14 cm",
+        "correct": false
+      },
+      {
+        "text": "18 cm",
         "correct": false
       }
     ]
