--- a/home.html
+++ b/home.html
@@ -403,6 +403,33 @@
     ]
   },
   {
+    "title": "Dấu hiệu con bạn thiếu vitamin",
+    "content": "Trẻ nhỏ có thể gặp phải tình trạng chán ăn và chậm nói, đây có thể là dấu hiệu cảnh báo thiếu hụt vitamin. Phụ huynh cần lưu ý đến các triệu chứng này để kịp thời bổ sung dinh dưỡng cho trẻ. Việc nhận biết sớm dấu hiệu thiếu vitamin sẽ giúp cải thiện sức khỏe và sự phát triển toàn diện của trẻ.",
+    "link": "https://vnexpress.net/dau-hieu-con-ban-thieu-vitamin-4865688.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Con bạn có thể thiếu vitamin nếu có dấu hiệu gì?",
+    "answers": [
+      {
+        "text": "Chán ăn và chậm nói",
+        "correct": true
+      },
+      {
+        "text": "Thích ăn nhiều đồ ngọt",
+        "correct": false
+      },
+      {
+        "text": "Ngủ nhiều hơn bình thường",
+        "correct": false
+      },
+      {
+        "text": "Hào hứng với đồ chơi mới",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Đà Nẵng hạ ngầm cáp thông tin trên đường phố trung tâm",
     "content": "UBND TP Đà Nẵng đã khởi động dự án hạ ngầm cáp thông tin và cải tạo hệ thống thoát nước tại 4 tuyến phố trung tâm với tổng kinh phí 280 tỷ đồng. Dự án này sẽ diễn ra từ năm 2024 đến 2026, nhằm nâng cao mỹ quan đô thị và cải thiện hạ tầng giao thông. Các tuyến đường được cải tạo bao gồm Phan Châu Trinh, Lê Lợi, Hoàng Diệu và Ông Ích Khiêm, với tổng chiều dài hơn 6,9 km. Mục tiêu chính của dự án là phục vụ phát triển du lịch và nâng cao chất lượng cuộc sống của người dân.",
     "link": "https://vnexpress.net/da-nang-ha-ngam-cap-thong-tin-tren-duong-pho-trung-tam-4865621.html",
@@ -1002,33 +1029,6 @@
     ]
   },
   {
-    "title": "5 món ăn giàu kẽm giúp tăng miễn dịch",
-    "content": "Bài viết giới thiệu 5 món ăn giàu kẽm giúp tăng cường hệ miễn dịch, bao gồm hàu, thịt bò, ức gà, các loại đậu và trứng. Hàu cung cấp lượng kẽm cao nhất, tiếp theo là thịt bò và ức gà, trong khi các loại đậu và trứng cũng là nguồn cung cấp kẽm và protein tốt. Những thực phẩm này không chỉ giúp tăng cường miễn dịch mà còn hỗ trợ sức khỏe tổng thể.",
-    "link": "https://vnexpress.net/5-mon-an-giau-kem-giup-tang-mien-dich-4865564.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Những món ăn nào giúp tăng cường miễn dịch với kẽm?",
-    "answers": [
-      {
-        "text": "Hàu, thịt bò, ức gà, các loại đậu, trứng",
-        "correct": true
-      },
-      {
-        "text": "Cá hồi, chuối, dứa, hạt chia",
-        "correct": false
-      },
-      {
-        "text": "Bánh mì, bơ đậu phộng, sữa, rau chân vịt",
-        "correct": false
-      },
-      {
-        "text": "Mì tôm, nước ngọt, khoai tây chiên",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Đau họng do viêm họng và trào ngược có khác nhau?",
     "content": "Đau họng do viêm họng và trào ngược họng thanh quản có những triệu chứng khác nhau. Viêm họng thường gây ra cảm giác đau, sưng đỏ và có thể sốt, trong khi trào ngược họng thường kèm theo nóng rát, ợ hơi và không có sốt. Điều trị hai loại bệnh này cũng khác nhau, với viêm họng có thể tự khỏi nhưng trào ngược cần thay đổi lối sống và điều trị nội khoa. Người bệnh nên đi khám để xác định nguyên nhân chính xác và có phương pháp điều trị phù hợp.",
     "link": "https://vnexpress.net/dau-hong-do-viem-hong-va-trao-nguoc-co-khac-nhau-4865609.html",
@@ -1051,6 +1051,33 @@
       },
       {
         "text": "Đau họng do viêm họng không liên quan đến nhiễm trùng.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "5 món ăn giàu kẽm giúp tăng miễn dịch",
+    "content": "Bài viết giới thiệu 5 món ăn giàu kẽm giúp tăng cường hệ miễn dịch, bao gồm hàu, thịt bò, ức gà, các loại đậu và trứng. Hàu cung cấp lượng kẽm cao nhất, tiếp theo là thịt bò và ức gà, trong khi các loại đậu và trứng cũng là nguồn cung cấp kẽm và protein tốt. Những thực phẩm này không chỉ giúp tăng cường miễn dịch mà còn hỗ trợ sức khỏe tổng thể.",
+    "link": "https://vnexpress.net/5-mon-an-giau-kem-giup-tang-mien-dich-4865564.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Những món ăn nào giúp tăng cường miễn dịch với kẽm?",
+    "answers": [
+      {
+        "text": "Hàu, thịt bò, ức gà, các loại đậu, trứng",
+        "correct": true
+      },
+      {
+        "text": "Cá hồi, chuối, dứa, hạt chia",
+        "correct": false
+      },
+      {
+        "text": "Bánh mì, bơ đậu phộng, sữa, rau chân vịt",
+        "correct": false
+      },
+      {
+        "text": "Mì tôm, nước ngọt, khoai tây chiên",
         "correct": false
       }
     ]
@@ -1852,33 +1879,6 @@
     ]
   },
   {
-    "title": "Hai tháng nỗ lực cứu người nhiễm trùng nặng van tim",
-    "content": "Trong suốt hai tháng, anh Thọ, 46 tuổi, đã trải qua cuộc chiến với viêm nội tâm mạc nhiễm trùng nặng do khối sùi trên van hai lá. Bệnh nhân đã từ chối phẫu thuật trong 12 năm qua và chỉ uống thuốc khi có triệu chứng. Khi viêm nhiễm tiến triển, anh đã được phẫu thuật thay van hai lá nhân tạo và sau đó theo dõi điều trị. Hiện tại, tình trạng sức khỏe của anh đã ổn định, không còn triệu chứng và đã xuất viện.",
-    "link": "https://vnexpress.net/hai-thang-no-luc-cuu-nguoi-nhiem-trung-nang-van-tim-4864905.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Anh Thọ đã trải qua điều trị gì để phục hồi sức khỏe?",
-    "answers": [
-      {
-        "text": "Phẫu thuật thay van hai lá nhân tạo",
-        "correct": true
-      },
-      {
-        "text": "Chỉ uống thuốc kháng sinh",
-        "correct": false
-      },
-      {
-        "text": "Điều trị bằng thuốc đông y",
-        "correct": false
-      },
-      {
-        "text": "Không cần điều trị gì cả",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Bé sơ sinh tắc ruột",
     "content": "Bé Minh, một trong hai bé song sinh, bị tắc ruột do dị ứng sữa công thức và phải nhập viện cấp cứu. Sau khi được điều trị, bác sĩ đã thực hiện phẫu thuật mở hậu môn tạm và sau một tháng, bé được phẫu thuật đóng lại. Tắc ruột ở trẻ sơ sinh là tình trạng cần được cấp cứu kịp thời, thường do lồng ruột hoặc các vấn đề khác về tiêu hóa. Các bác sĩ khuyến cáo nên cho trẻ bú sữa mẹ hoàn toàn trong 6 tháng đầu đời để giảm nguy cơ tắc ruột.",
     "link": "https://vnexpress.net/be-so-sinh-tac-ruot-4865383.html",
@@ -1905,6 +1905,33 @@
       },
       {
         "text": "Tiêu chảy cấp",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Hai tháng nỗ lực cứu người nhiễm trùng nặng van tim",
+    "content": "Trong suốt hai tháng, anh Thọ, 46 tuổi, đã trải qua cuộc chiến với viêm nội tâm mạc nhiễm trùng nặng do khối sùi trên van hai lá. Bệnh nhân đã từ chối phẫu thuật trong 12 năm qua và chỉ uống thuốc khi có triệu chứng. Khi viêm nhiễm tiến triển, anh đã được phẫu thuật thay van hai lá nhân tạo và sau đó theo dõi điều trị. Hiện tại, tình trạng sức khỏe của anh đã ổn định, không còn triệu chứng và đã xuất viện.",
+    "link": "https://vnexpress.net/hai-thang-no-luc-cuu-nguoi-nhiem-trung-nang-van-tim-4864905.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Anh Thọ đã trải qua điều trị gì để phục hồi sức khỏe?",
+    "answers": [
+      {
+        "text": "Phẫu thuật thay van hai lá nhân tạo",
+        "correct": true
+      },
+      {
+        "text": "Chỉ uống thuốc kháng sinh",
+        "correct": false
+      },
+      {
+        "text": "Điều trị bằng thuốc đông y",
+        "correct": false
+      },
+      {
+        "text": "Không cần điều trị gì cả",
         "correct": false
       }
     ]
