Batch update of generated files

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,37 @@
     */
     const newsData = [
   {
+    "title": "Những thực phẩm lên men giúp tóc chắc khỏe",
+    "content": "Thực phẩm lên men như sữa chua, kim chi và các sản phẩm từ đậu nành có tác dụng tốt cho sức khỏe tóc. Chúng cung cấp lợi khuẩn, vitamin B và chất chống oxy hóa, giúp nuôi dưỡng da đầu và thúc đẩy tóc mọc khỏe. Bác sĩ Hoàng Quyết Tiến cho biết, các lợi khuẩn này giúp cân bằng hệ vi sinh trên da đầu, ngăn ngừa gàu và viêm nhiễm, từ đó tạo điều kiện cho tóc phát triển tốt hơn. Tuy nhiên, cần sử dụng thực phẩm lên men một cách hợp lý để tránh ảnh hưởng xấu đến sức khỏe.",
+    "link": "https://vnexpress.net/nhung-thuc-pham-len-men-giup-toc-chac-khoe-4865722.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Những thực phẩm lên men nào giúp tóc chắc khỏe?",
+    "answers": [
+      {
+        "text": "Sữa chua, kim chi, sản phẩm lên men từ đậu nành và giấm",
+        "correct": true
+      },
+      {
+        "text": "Chỉ sữa chua",
+        "correct": false
+      },
+      {
+        "text": "Chỉ kim chi",
+        "correct": false
+      },
+      {
+        "text": "Chỉ giấm táo",
+        "correct": false
+      },
+      {
+        "text": "Chỉ dưa cải muối",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "U22 Trung Quốc - U22 Việt Nam: Viktor Lê đá chính",
     "content": "U22 Việt Nam sẽ gặp U22 Trung Quốc trong trận giao hữu cuối cùng tại giải Tứ Hùng Diêm Thành. Viktor Lê được chọn đá chính trong đội hình xuất phát. Nếu Việt Nam thắng trận này, họ sẽ giành chức vô địch giải đấu, trong khi Trung Quốc hiện đang dẫn đầu với 4 điểm. Đây là trận đấu quyết định cho ngôi vô địch, với sự tham gia của bốn đội gồm Việt Nam, Trung Quốc, Hàn Quốc và Uzbekistan.",
     "link": "https://vnexpress.net/truc-tiep-bong-da-u22-trung-quoc-vs-u22-viet-nam-4865729.html",
@@ -668,33 +699,6 @@
     ]
   },
   {
-    "title": "Cách làm món cà chua nhồi thịt",
-    "content": "Món cà chua nhồi thịt là một món ăn ngon, dễ làm và phù hợp với khẩu vị của trẻ nhỏ và người già. Nguyên liệu chính bao gồm cà chua, thịt nạc vai, mộc nhĩ và các gia vị khác. Quy trình chế biến bao gồm sơ chế cà chua, ướp thịt, nhồi nhân vào cà chua và nấu chín bằng nhiều phương pháp khác nhau như rán, nướng hoặc chiên không dầu. Thành phẩm là món cà chua nhồi thịt giữ nguyên hình dáng, có thịt mềm ngọt và sốt cà chua mịn màng.",
-    "link": "https://vnexpress.net/cach-lam-mon-ca-chua-nhoi-thit-4865726.html",
-    "cat": "gia-dinh",
-    "positivity": 9,
-    "importance": 7,
-    "question": "Cà chua nhồi thịt được làm từ những nguyên liệu gì?",
-    "answers": [
-      {
-        "text": "Cà chua, thịt nạc vai, mộc nhĩ",
-        "correct": true
-      },
-      {
-        "text": "Cà rốt, thịt bò, nấm hương",
-        "correct": false
-      },
-      {
-        "text": "Cà chua, tôm, rau cần",
-        "correct": false
-      },
-      {
-        "text": "Thịt gà, khoai tây, hành tây",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Kháng insulin gây mụn trứng cá thế nào",
     "content": "Kháng insulin có thể làm tăng mức độ hormone androgen trong cơ thể, từ đó thúc đẩy tăng tiết bã nhờn và làm nặng thêm tình trạng mụn trứng cá. Tình trạng này thường gặp ở thanh thiếu niên và người lớn, gây ra bởi sự tích tụ đường trong máu và kích thích các tuyến sản xuất hormone. Đặc biệt, kháng insulin còn liên quan đến viêm mạn tính, làm cho tình trạng mụn trở nên nghiêm trọng hơn, đặc biệt là ở phụ nữ có hội chứng buồng trứng đa nang (PCOS). Để điều trị, cần kết hợp giữa phương pháp da liễu và thay đổi lối sống, bao gồm chế độ ăn uống lành mạnh.",
     "link": "https://vnexpress.net/khang-insulin-gay-mun-trung-ca-the-nao-4865724.html",
@@ -717,6 +721,33 @@
       },
       {
         "text": "Kháng insulin làm giảm bã nhờn trên da.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Cách làm món cà chua nhồi thịt",
+    "content": "Món cà chua nhồi thịt là một món ăn ngon, dễ làm và phù hợp với khẩu vị của trẻ nhỏ và người già. Nguyên liệu chính bao gồm cà chua, thịt nạc vai, mộc nhĩ và các gia vị khác. Quy trình chế biến bao gồm sơ chế cà chua, ướp thịt, nhồi nhân vào cà chua và nấu chín bằng nhiều phương pháp khác nhau như rán, nướng hoặc chiên không dầu. Thành phẩm là món cà chua nhồi thịt giữ nguyên hình dáng, có thịt mềm ngọt và sốt cà chua mịn màng.",
+    "link": "https://vnexpress.net/cach-lam-mon-ca-chua-nhoi-thit-4865726.html",
+    "cat": "gia-dinh",
+    "positivity": 9,
+    "importance": 7,
+    "question": "Cà chua nhồi thịt được làm từ những nguyên liệu gì?",
+    "answers": [
+      {
+        "text": "Cà chua, thịt nạc vai, mộc nhĩ",
+        "correct": true
+      },
+      {
+        "text": "Cà rốt, thịt bò, nấm hương",
+        "correct": false
+      },
+      {
+        "text": "Cà chua, tôm, rau cần",
+        "correct": false
+      },
+      {
+        "text": "Thịt gà, khoai tây, hành tây",
         "correct": false
       }
     ]
@@ -1290,33 +1321,6 @@
     ]
   },
   {
-    "title": "Bệnh lao phổi có thể chữa khỏi không?",
-    "content": "Bệnh lao phổi có thể chữa khỏi hoàn toàn nếu được phát hiện sớm và điều trị theo đúng phác đồ. Tỷ lệ điều trị thành công đối với lao phổi nhạy cảm với thuốc lên đến khoảng 95%, trong khi lao kháng thuốc có tỷ lệ thành công từ 60-80%. Người bệnh cần tuân thủ nghiêm ngặt thời gian và liều lượng thuốc, đồng thời duy trì chế độ dinh dưỡng hợp lý để tăng cường sức đề kháng.",
-    "link": "https://vnexpress.net/benh-lao-phoi-co-the-chua-khoi-khong-4865645.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Bệnh lao phổi có chữa khỏi hoàn toàn không?",
-    "answers": [
-      {
-        "text": "Có, nếu phát hiện sớm và điều trị đúng cách.",
-        "correct": true
-      },
-      {
-        "text": "Không, bệnh lao phổi không thể chữa khỏi.",
-        "correct": false
-      },
-      {
-        "text": "Có, nhưng chỉ ở những người trẻ tuổi.",
-        "correct": false
-      },
-      {
-        "text": "Có, nhưng chỉ với thuốc đặc trị.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "VAS tiên phong chuyển đổi số, tích hợp AI vào giảng dạy cho học sinh",
     "content": "Trường Quốc tế Việt Úc (VAS) đang tiên phong trong việc chuyển đổi số và tích hợp trí tuệ nhân tạo (AI) vào chương trình giảng dạy cho học sinh. Được tổ chức vào ngày 15/3, hội thảo \"Tối ưu cuộc sống với AI\" thu hút sự tham gia của hơn 200 phụ huynh và 1 triệu lượt xem trực tuyến. Từ năm học 2025-2026, học sinh VAS sẽ có một tiết học về AI mỗi tuần, nhằm trang bị kỹ năng cần thiết cho thế hệ công dân số. VAS cam kết không ngừng đổi mới và phát triển để giữ vững vị thế hàng đầu trong giáo dục quốc tế tại Việt Nam.",
     "link": "https://dantri.com.vn/giao-duc/vas-tien-phong-chuyen-doi-so-tich-hop-ai-vao-giang-day-cho-hoc-sinh-20250325141325818.htm",
@@ -1339,6 +1343,33 @@
       },
       {
         "text": "Học sinh chỉ học lý thuyết về AI.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Bệnh lao phổi có thể chữa khỏi không?",
+    "content": "Bệnh lao phổi có thể chữa khỏi hoàn toàn nếu được phát hiện sớm và điều trị theo đúng phác đồ. Tỷ lệ điều trị thành công đối với lao phổi nhạy cảm với thuốc lên đến khoảng 95%, trong khi lao kháng thuốc có tỷ lệ thành công từ 60-80%. Người bệnh cần tuân thủ nghiêm ngặt thời gian và liều lượng thuốc, đồng thời duy trì chế độ dinh dưỡng hợp lý để tăng cường sức đề kháng.",
+    "link": "https://vnexpress.net/benh-lao-phoi-co-the-chua-khoi-khong-4865645.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Bệnh lao phổi có chữa khỏi hoàn toàn không?",
+    "answers": [
+      {
+        "text": "Có, nếu phát hiện sớm và điều trị đúng cách.",
+        "correct": true
+      },
+      {
+        "text": "Không, bệnh lao phổi không thể chữa khỏi.",
+        "correct": false
+      },
+      {
+        "text": "Có, nhưng chỉ ở những người trẻ tuổi.",
+        "correct": false
+      },
+      {
+        "text": "Có, nhưng chỉ với thuốc đặc trị.",
         "correct": false
       }
     ]
@@ -1688,33 +1719,6 @@
     ]
   },
   {
-    "title": "Đau họng do viêm họng và trào ngược có khác nhau?",
-    "content": "Đau họng do viêm họng và trào ngược họng thanh quản có những triệu chứng khác nhau. Viêm họng thường gây ra cảm giác đau, sưng đỏ và có thể sốt, trong khi trào ngược họng thường kèm theo nóng rát, ợ hơi và không có sốt. Điều trị hai loại bệnh này cũng khác nhau, với viêm họng có thể tự khỏi nhưng trào ngược cần thay đổi lối sống và điều trị nội khoa. Người bệnh nên đi khám để xác định nguyên nhân chính xác và có phương pháp điều trị phù hợp.",
-    "link": "https://vnexpress.net/dau-hong-do-viem-hong-va-trao-nguoc-co-khac-nhau-4865609.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Đau họng do viêm họng và trào ngược có gì khác nhau?",
-    "answers": [
-      {
-        "text": "Đau họng do viêm họng thường kèm theo sốt và đau rát khi nuốt.",
-        "correct": true
-      },
-      {
-        "text": "Đau họng do viêm họng không có triệu chứng kèm theo.",
-        "correct": false
-      },
-      {
-        "text": "Đau họng do trào ngược không có đau nhức cơ thể.",
-        "correct": false
-      },
-      {
-        "text": "Đau họng do viêm họng không liên quan đến nhiễm trùng.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "5 món ăn giàu kẽm giúp tăng miễn dịch",
     "content": "Bài viết giới thiệu 5 món ăn giàu kẽm giúp tăng cường hệ miễn dịch, bao gồm hàu, thịt bò, ức gà, các loại đậu và trứng. Hàu cung cấp lượng kẽm cao nhất, tiếp theo là thịt bò và ức gà, trong khi các loại đậu và trứng cũng là nguồn cung cấp kẽm và protein tốt. Những thực phẩm này không chỉ giúp tăng cường miễn dịch mà còn hỗ trợ sức khỏe tổng thể.",
     "link": "https://vnexpress.net/5-mon-an-giau-kem-giup-tang-mien-dich-4865564.html",
@@ -1737,6 +1741,33 @@
       },
       {
         "text": "Mì tôm, nước ngọt, khoai tây chiên",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Đau họng do viêm họng và trào ngược có khác nhau?",
+    "content": "Đau họng do viêm họng và trào ngược họng thanh quản có những triệu chứng khác nhau. Viêm họng thường gây ra cảm giác đau, sưng đỏ và có thể sốt, trong khi trào ngược họng thường kèm theo nóng rát, ợ hơi và không có sốt. Điều trị hai loại bệnh này cũng khác nhau, với viêm họng có thể tự khỏi nhưng trào ngược cần thay đổi lối sống và điều trị nội khoa. Người bệnh nên đi khám để xác định nguyên nhân chính xác và có phương pháp điều trị phù hợp.",
+    "link": "https://vnexpress.net/dau-hong-do-viem-hong-va-trao-nguoc-co-khac-nhau-4865609.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Đau họng do viêm họng và trào ngược có gì khác nhau?",
+    "answers": [
+      {
+        "text": "Đau họng do viêm họng thường kèm theo sốt và đau rát khi nuốt.",
+        "correct": true
+      },
+      {
+        "text": "Đau họng do viêm họng không có triệu chứng kèm theo.",
+        "correct": false
+      },
+      {
+        "text": "Đau họng do trào ngược không có đau nhức cơ thể.",
+        "correct": false
+      },
+      {
+        "text": "Đau họng do viêm họng không liên quan đến nhiễm trùng.",
         "correct": false
       }
     ]
@@ -3318,33 +3349,6 @@
     ]
   },
   {
-    "title": "Siêu mẫu Minh Tú sau kết hôn: Thay đổi \"180 độ\", chồng Tây cưng chiều",
-    "content": "Siêu mẫu Minh Tú đã có nhiều thay đổi tích cực trong cuộc sống sau khi kết hôn với chồng Tây, Christopher. Cô chia sẻ rằng sau khi về chung một nhà, tính cách của mình đã trở nên mềm mỏng và nữ tính hơn, thường xuyên vào bếp nấu ăn và chăm sóc tổ ấm. Minh Tú cũng cho biết chồng là nguồn động viên lớn, giúp cô vượt qua giai đoạn khó khăn trong cuộc sống. Hai người thường xuyên dành thời gian cho nhau, đi du lịch và thể hiện tình cảm ngọt ngào qua những hành động nhỏ.",
-    "link": "https://dantri.com.vn/giai-tri/sieu-mau-minh-tu-sau-ket-hon-thay-doi-180-do-chong-tay-cung-chieu-20250324145813189.htm",
-    "cat": "giai-tri",
-    "positivity": 9,
-    "importance": 7,
-    "question": "Minh Tú đã thay đổi như thế nào sau khi kết hôn?",
-    "answers": [
-      {
-        "text": "Cô trở nên nữ tính và chăm sóc gia đình hơn.",
-        "correct": true
-      },
-      {
-        "text": "Cô vẫn giữ nguyên tính cách mạnh mẽ như trước.",
-        "correct": false
-      },
-      {
-        "text": "Cô không còn tham gia vào các hoạt động xã hội.",
-        "correct": false
-      },
-      {
-        "text": "Cô trở nên ít nổi tiếng hơn.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Mỹ phát triển SUV bọc thép mới bảo vệ Tổng thống",
     "content": "Giám đốc Cơ quan Mật vụ Mỹ vừa có cuộc gặp với lãnh đạo General Motors để thảo luận về việc phát triển SUV bọc thép mới nhằm bảo vệ Tổng thống. Cuộc họp diễn ra trong bối cảnh GM đang chế tạo phiên bản mới của chiếc limousine dành cho Tổng thống có biệt danh \"The Beast\". Hợp đồng trị giá 14,8 triệu USD đã được ký kết với GM để tiến hành dự án này, nhưng thời gian ra mắt xe mới vẫn chưa được xác định.",
     "link": "https://vnexpress.net/my-phat-trien-suv-boc-thep-moi-bao-ve-tong-thong-4865414.html",
@@ -3371,6 +3375,33 @@
       },
       {
         "text": "Xe điện",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Siêu mẫu Minh Tú sau kết hôn: Thay đổi \"180 độ\", chồng Tây cưng chiều",
+    "content": "Siêu mẫu Minh Tú đã có nhiều thay đổi tích cực trong cuộc sống sau khi kết hôn với chồng Tây, Christopher. Cô chia sẻ rằng sau khi về chung một nhà, tính cách của mình đã trở nên mềm mỏng và nữ tính hơn, thường xuyên vào bếp nấu ăn và chăm sóc tổ ấm. Minh Tú cũng cho biết chồng là nguồn động viên lớn, giúp cô vượt qua giai đoạn khó khăn trong cuộc sống. Hai người thường xuyên dành thời gian cho nhau, đi du lịch và thể hiện tình cảm ngọt ngào qua những hành động nhỏ.",
+    "link": "https://dantri.com.vn/giai-tri/sieu-mau-minh-tu-sau-ket-hon-thay-doi-180-do-chong-tay-cung-chieu-20250324145813189.htm",
+    "cat": "giai-tri",
+    "positivity": 9,
+    "importance": 7,
+    "question": "Minh Tú đã thay đổi như thế nào sau khi kết hôn?",
+    "answers": [
+      {
+        "text": "Cô trở nên nữ tính và chăm sóc gia đình hơn.",
+        "correct": true
+      },
+      {
+        "text": "Cô vẫn giữ nguyên tính cách mạnh mẽ như trước.",
+        "correct": false
+      },
+      {
+        "text": "Cô không còn tham gia vào các hoạt động xã hội.",
+        "correct": false
+      },
+      {
+        "text": "Cô trở nên ít nổi tiếng hơn.",
         "correct": false
       }
     ]
@@ -4864,33 +4895,6 @@
     ]
   },
   {
-    "title": "Vợ cầu thủ Quang Hải sở hữu loạt túi hàng hiệu Hermès, Dior đắt giá",
-    "content": "Vợ cầu thủ Quang Hải, Chu Thanh Huyền, nổi bật với bộ sưu tập túi xách hàng hiệu đến từ các thương hiệu nổi tiếng như Hermès và Dior. Cô là một doanh nhân thành công trong lĩnh vực mỹ phẩm trực tuyến và thường xuyên chia sẻ về cuộc sống xa hoa của mình trên mạng xã hội. Bộ sưu tập của cô bao gồm những mẫu túi đắt giá như Hermès Birkin, Hermès Picotin, và Mini Lady Dior, thể hiện gu thời trang tinh tế và đẳng cấp của một người phụ nữ hiện đại.",
-    "link": "https://dantri.com.vn/giai-tri/vo-cau-thu-quang-hai-so-huu-loat-tui-hang-hieu-hermes-dior-dat-gia-20250323231704019.htm",
-    "cat": "giai-tri",
-    "positivity": 8,
-    "importance": 6,
-    "question": "Vợ cầu thủ Quang Hải sở hữu những thương hiệu túi xách nào?",
-    "answers": [
-      {
-        "text": "Hermès và Dior",
-        "correct": true
-      },
-      {
-        "text": "Chanel và Gucci",
-        "correct": false
-      },
-      {
-        "text": "Prada và Fendi",
-        "correct": false
-      },
-      {
-        "text": "Louis Vuitton và Versace",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Thiếu vi chất - thách thức lớn nhất với trẻ em Việt",
     "content": "Trẻ em Việt Nam đang phải đối mặt với thách thức lớn nhất về dinh dưỡng là thiếu vi chất dinh dưỡng, theo báo cáo từ bà Supasita Kraisri, Giám đốc tiếp thị FrieslandCampina Việt Nam. Khảo sát SEANUTS II cho thấy tỷ lệ trẻ thiếu vi chất dinh dưỡng, đặc biệt là sắt và kẽm, đang ở mức cao, với nhiều trẻ không đáp ứng được nhu cầu dinh dưỡng hàng ngày. Thiếu vi chất có thể dẫn đến những ảnh hưởng nghiêm trọng đến sự phát triển thể chất và trí tuệ của trẻ, do vậy việc chăm sóc dinh dưỡng cho trẻ em là rất cần thiết.",
     "link": "https://vnexpress.net/thieu-vi-chat-thach-thuc-lon-nhat-voi-tre-em-viet-4865346.html",
@@ -4917,6 +4921,33 @@
       },
       {
         "text": "Giảm nguy cơ mắc bệnh cho trẻ.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Vợ cầu thủ Quang Hải sở hữu loạt túi hàng hiệu Hermès, Dior đắt giá",
+    "content": "Vợ cầu thủ Quang Hải, Chu Thanh Huyền, nổi bật với bộ sưu tập túi xách hàng hiệu đến từ các thương hiệu nổi tiếng như Hermès và Dior. Cô là một doanh nhân thành công trong lĩnh vực mỹ phẩm trực tuyến và thường xuyên chia sẻ về cuộc sống xa hoa của mình trên mạng xã hội. Bộ sưu tập của cô bao gồm những mẫu túi đắt giá như Hermès Birkin, Hermès Picotin, và Mini Lady Dior, thể hiện gu thời trang tinh tế và đẳng cấp của một người phụ nữ hiện đại.",
+    "link": "https://dantri.com.vn/giai-tri/vo-cau-thu-quang-hai-so-huu-loat-tui-hang-hieu-hermes-dior-dat-gia-20250323231704019.htm",
+    "cat": "giai-tri",
+    "positivity": 8,
+    "importance": 6,
+    "question": "Vợ cầu thủ Quang Hải sở hữu những thương hiệu túi xách nào?",
+    "answers": [
+      {
+        "text": "Hermès và Dior",
+        "correct": true
+      },
+      {
+        "text": "Chanel và Gucci",
+        "correct": false
+      },
+      {
+        "text": "Prada và Fendi",
+        "correct": false
+      },
+      {
+        "text": "Louis Vuitton và Versace",
         "correct": false
       }
     ]
